--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <head>
   <meta charset="UTF-8">
   <title>『Miracle 22』</title>
@@ -7,58 +8,208 @@
   <link rel="stylesheet" href="./style.css">
 
 </head>
+
 <body>
-<!-- partial:index.partial.html -->
-<main id=app>
-
-  
-  <section class="cards">
-    <div class="card fool animated"></div>
-    <div class="card magician animated"></div>
-    <div class="card priestess animated"></div>
-    <div class="card empress animated"></div>
-    <div class="card emperor animated"></div>
-  </section>
-
-  <section class="cards">
-    <div class="card hierophant animated"></div>
-    <div class="card lovers animated"></div>
-    <div class="card chariot animated"></div>
-    <div class="card strength animated"></div>
-    <div class="card hermit animated"></div>
-  </section>
-
-  <section class="cards">
-    <div class="card fortune animated"></div>
-    <div class="card justice animated"></div>
-    <div class="card hanged animated"></div>
-    <div class="card death animated"></div>
-    <div class="card temperance animated"></div>
-  </section>
-
-  <section class="cards">
-    <div class="card devil animated"></div>
-    <div class="card tower animated"></div>
-    <div class="card star animated"></div>
-    <div class="card moon animated"></div>
-    <div class="card sun animated"></div>
-  </section>
-
-  <section class="cards">
-    <div class="card judgment animated"></div>
-    <div class="card world animated"></div>
-  </section>
+  <!-- partial:index.partial.html -->
+  <main id=app>
 
 
-  
-  
-  
-  
-  <style class="hover"></style>
-  
-</main>
-<!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script><script  src="./script.js"></script>
+    <section class="cards">
+      <div class="card fool animated">
+        <div class="overlay">
+          <br>百合絢斗<br>Ayato Yuri<br>
+          <p>種族：人類</p>
+          <p>年齢：20</p>
+          <p>誕生日：2nd September</p>
+        </div>
+      </div>
+      <div class="card magician animated">
+        <div class="overlay">
+          <br>十王院カケル<br>（十王院一男）<br>Kakeru Jyuouin<br>Kazuo Jyuouin<br>
+          <p>種族：人類</p>
+          <p>年齢：17</p>
+          <p>誕生日：22nd December</p>
+        </div>
+      </div>
+      <div class="card priestess animated">
+        <div class="overlay">
+          <br>鳴上嵐<br>（蛍空嵐）<br>Arashi Narukami<br>（Arashi Hotazora）<br>
+          <p>種族：吸血鬼</p>
+          <p>年齢：18（100+）</p>
+          <p>誕生日：3rd March</p>
+        </div>
+      </div>
+      <div class="card empress animated">
+        <div class="overlay">
+          <br>玻璃<br>（九十九和波）<br>Hari<br>（Kazuha Tsukumo）<br>
+          <p>種族：人類</p>
+          <p>年齢：19</p>
+          <p>誕生日：28th August</p>
+        </div>
+      </div>
+      <div class="card emperor animated">
+        <div class="overlay">
+          <br>月永レオ<br>（獅子焔レオ）<br>Leo Tsukinaga<br>（Leo Shishien）<br>
+          <p>種族：吸血鬼</p>
+          <p>年齢：20（100+）</p>
+          <p>誕生日：5th May</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="cards">
+      <div class="card hierophant animated">
+        <div class="overlay">
+          <br>瀬名泉<br>（澪雨和泉）<br>Izumi Sena<br>（Izumi Mioame）<br>
+          <p>種族：吸血鬼</p>
+          <p>年齢：20（100+）</p>
+          <p>誕生日：2nd November</p>
+        </div>
+      </div>
+      <div class="card lovers animated">
+        <div class="overlay">
+          <br>Jade & Floyd Leech<br>
+          <p>種族：人類（異能者）</p>
+          <p>年齢：21</p>
+          <p>誕生日：5th November</p>
+        </div>
+      </div>
+      <div class="card chariot animated">
+        <div class="overlay">
+          <br>Francis Fitzgerald<br>
+          <p>種族：人類（異能者）</p>
+          <p>年齢：41</p>
+          <p>誕生日：24th September</p>
+        </div>
+      </div>
+      <div class="card strength animated">
+        <div class="overlay">
+          <br>勝己 & 鋭児郎<br>Katsuki & Eijirou<br>
+          <p>種族：人類（異能者）/ドラゴン</p>
+          <p>年齢：15</p>
+          <p>誕生日：20th April / 16th October</p>
+        </div>
+      </div>
+      <div class="card hermit animated">
+        <div class="overlay">
+          <br>斎宮宗<br>Shu Itsuki<br>
+          <p>種族：人類（異能者）</p>
+          <p>年齢：25（100+）</p>
+          <p>誕生日：30th October</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="cards">
+      <div class="card fortune animated">
+        <div class="overlay">
+          <br>有栖川帝統<br>Dice Arisugawa<br>
+          <p>種族：人類（異能者）</p>
+          <p>年齢：20（100+）</p>
+          <p>誕生日：7th July</p>
+        </div>
+      </div>
+      <div class="card justice animated">
+        <div class="overlay">
+          <br>朱櫻司<br>（桜小路司）<br>Tsukasa Suou<br>（Tsukasa Sakurakouji）<br>
+          <p>種族：吸血鬼</p>
+          <p>年齢：18（100+）</p>
+          <p>誕生日：6th April</p>
+        </div>
+      </div>
+      <div class="card hanged animated">
+        <div class="overlay">
+          <br>入間銃兎<br>Jyuto Iruma<br>
+          <p>種族：人類</p>
+          <p>年齢：29</p>
+          <p>誕生日：30th May</p>
+        </div>
+      </div>
+      <div class="card death animated">
+        <div class="overlay">
+          <br>田中眼蛇夢<br>Gandum Tanaka<br>
+          <p>種族：人類（異能者）</p>
+          <p>年齢：19</p>
+          <p>誕生日：14th December</p>
+        </div>
+      </div>
+      <div class="card temperance animated">
+        <div class="overlay">
+          <br>ギィ<br>Gui<br>
+          <p>種族：人狼</p>
+          <p>年齢：18</p>
+          <p>誕生日：31st October</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="cards">
+      <div class="card devil animated">
+        <div class="overlay">
+          <br>及川徹<br>Toru Oikawa<br>
+          <p>種族：人類（異能者）</p>
+          <p>年齢：22</p>
+          <p>誕生日：20th July</p>
+        </div>
+      </div>
+      <div class="card tower animated">
+        <div class="overlay">
+          <br>James Moriarty<br>
+          <p>種族：反英霊</p>
+          <p>年齢：？</p>
+          <p>誕生日：？</p>
+        </div>
+      </div>
+      <div class="card star animated">
+        <div class="overlay">
+          <br>Cu Chulainn<br>
+          <p>種族：英霊</p>
+          <p>年齢：？</p>
+          <p>誕生日：？</p>
+        </div>
+      </div>
+      <div class="card moon animated">
+        <div class="overlay">
+          <br>朔間凛月<br>（朔夜律）<br>Ritsu Sakuma<br>（Ritsu Sakuya）<br>
+          <p>種族：吸血鬼</p>
+          <p>年齢：20（100+）</p>
+          <p>誕生日：22nd September</p>
+        </div>
+      </div>
+      <div class="card sun animated">
+        <div class="overlay">
+          <br>皇天馬<br>Tenma Sumeragi<br>
+          <p>種族：人類</p>
+          <p>年齢：17</p>
+          <p>誕生日：21st June</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="cards">
+      <div class="card judgment animated">
+        <div class="overlay">
+          <br>伏見弓弦 & 七種茨<br>Yuzuru Fushimi & Ibara Saegusa<br>
+          <p>種族：天司</p>
+          <p>年齢：24（？）</p>
+          <p>誕生日：18th October / 14th November</p>
+        </div>
+      </div>
+      <div class="card world animated"></div>
+    </section>
+
+
+
+
+
+
+    <style class="hover"></style>
+
+  </main>
+  <!-- partial -->
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
+  <script src="./script.js"></script>
 
 </body>
+
 </html>
