--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     <section class="cards">
       <div class="card judgment animated">
         <div class="overlay">
-          <br>伏見弓弦 & 七種茨<br>Yuzuru Fushimi & Ibara Saegusa<br>
+          <br>伏見弓弦 & 七種茨<br>Yuzuru & Ibara<br>
           <p>種族：天司</p>
           <p>年齢：24（？）</p>
           <p>誕生日：18th October / 14th November</p>
