--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
       <div class="card magician animated">
         <div class="overlay">
-          <br>十王院カケル<br>（十王院一男）<br>Kakeru Jyuouin<br>Kazuo Jyuouin<br>
+          <br>十王院カケル<br>Kakeru Jyuouin<br>
           <p>種族：人類</p>
           <p>年齢：17</p>
           <p>誕生日：22nd December</p>
@@ -33,7 +33,7 @@
       </div>
       <div class="card priestess animated">
         <div class="overlay">
-          <br>鳴上嵐<br>（蛍空嵐）<br>Arashi Narukami<br>（Arashi Hotazora）<br>
+          <br>鳴上嵐<br>Arashi Narukami<br>
           <p>種族：吸血鬼</p>
           <p>年齢：18（100+）</p>
           <p>誕生日：3rd March</p>
@@ -41,7 +41,7 @@
       </div>
       <div class="card empress animated">
         <div class="overlay">
-          <br>玻璃<br>（九十九和波）<br>Hari<br>（Kazuha Tsukumo）<br>
+          <br>玻璃<br>Hari<br>
           <p>種族：人類</p>
           <p>年齢：19</p>
           <p>誕生日：28th August</p>
@@ -49,7 +49,7 @@
       </div>
       <div class="card emperor animated">
         <div class="overlay">
-          <br>月永レオ<br>（獅子焔レオ）<br>Leo Tsukinaga<br>（Leo Shishien）<br>
+          <br>月永レオ<br>Leo Tsukinaga<br>
           <p>種族：吸血鬼</p>
           <p>年齢：20（100+）</p>
           <p>誕生日：5th May</p>
@@ -60,7 +60,7 @@
     <section class="cards">
       <div class="card hierophant animated">
         <div class="overlay">
-          <br>瀬名泉<br>（澪雨和泉）<br>Izumi Sena<br>（Izumi Mioame）<br>
+          <br>瀬名泉<br>Izumi Sena<br>
           <p>種族：吸血鬼</p>
           <p>年齢：20（100+）</p>
           <p>誕生日：2nd November</p>
@@ -111,7 +111,7 @@
       </div>
       <div class="card justice animated">
         <div class="overlay">
-          <br>朱櫻司<br>（桜小路司）<br>Tsukasa Suou<br>（Tsukasa Sakurakouji）<br>
+          <br>朱櫻司<br>Tsukasa Suou<br>
           <p>種族：吸血鬼</p>
           <p>年齢：18（100+）</p>
           <p>誕生日：6th April</p>
@@ -170,7 +170,7 @@
       </div>
       <div class="card moon animated">
         <div class="overlay">
-          <br>朔間凛月<br>（朔夜律）<br>Ritsu Sakuma<br>（Ritsu Sakuya）<br>
+          <br>朔間凛月<br>Ritsu Sakuma<br>
           <p>種族：吸血鬼</p>
           <p>年齢：20（100+）</p>
           <p>誕生日：22nd September</p>
